# docs/swagger.json
@@ -8,12 +8,12 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:7426",
+    "host": "103.157.26.181:7426",
     "basePath": "/api",
     "paths": {
         "/job": {
             "get": {
-                "description": "Return list of jobs.",
+                "description": "Api Enpoint to Get All Data Jobs",
                 "tags": [
                     "Jobs"
                 ],
@@ -28,17 +28,17 @@
                 }
             },
             "post": {
-                "description": "Save job data in Db.",
+                "description": "Api Endpoint To Create New Job.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Jobs"
                 ],
-                "summary": "Create job",
+                "summary": "Create New Job",
                 "parameters": [
                     {
-                        "description": "Create job",
+                        "description": "Data Input",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -57,20 +57,111 @@
                 }
             }
         },
-        "/job/{jobId}": {
+        "/job/applier/{userId}": {
             "get": {
-                "description": "Return the job whoes jobId value matches id",
+                "description": "Api endpoint to get applied job by userId.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Jobs"
                 ],
-                "summary": "Get Single jobs by id.",
+                "summary": "Get Applied Jobs",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "get jobs by id",
+                        "description": "param enpoint",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/job/apply": {
+            "post": {
+                "description": "Api endpoint to apply job.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Applicants"
+                ],
+                "summary": "Apply job",
+                "parameters": [
+                    {
+                        "description": "data input",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.ApplierRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/job/cancel": {
+            "post": {
+                "description": "Api Enpoint to cancel apply job.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Applicants"
+                ],
+                "summary": "Cancel Apply job",
+                "parameters": [
+                    {
+                        "description": "data input",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.ApplierRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/job/{jobId}": {
+            "get": {
+                "description": "Api Enpoint to Get Single Job By Id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Jobs"
+                ],
+                "summary": "Get Single Job By Id.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Param Endpoint",
                         "name": "jobId",
                         "in": "path",
                         "required": true
@@ -86,7 +177,7 @@
                 }
             },
             "delete": {
-                "description": "Delete job data in Db.",
+                "description": "Api Endpoint for Delete job.",
                 "produces": [
                     "application/json"
                 ],
@@ -96,8 +187,8 @@
                 "summary": "Delete job",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Delete Job By Job ID",
+                        "type": "integer",
+                        "description": "param endpoint",
                         "name": "jobId",
                         "in": "path",
                         "required": true
@@ -113,24 +204,24 @@
                 }
             },
             "patch": {
-                "description": "Update job data in Db.",
+                "description": "Api Endpoint To Update Job",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Jobs"
                 ],
-                "summary": "Update job",
+                "summary": "Update Job",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Update Job By Job ID",
+                        "type": "integer",
+                        "description": "Param Enpoint",
                         "name": "jobId",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Update job",
+                        "description": "Data Input",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -151,7 +242,7 @@
         },
         "/job/{userId}": {
             "get": {
-                "description": "Return the job whoes jobId value matches id",
+                "description": "Api Endpoint To Get Shared Jobs.",
                 "produces": [
                     "application/json"
                 ],
@@ -162,7 +253,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "get shared jobs by userId",
+                        "description": "Param Endpoint",
                         "name": "userId",
                         "in": "path",
                         "required": true
@@ -180,6 +271,21 @@
         }
     },
     "definitions": {
+        "request.ApplierRequest": {
+            "type": "object",
+            "required": [
+                "job_id",
+                "user_id"
+            ],
+            "properties": {
+                "job_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "request.CreateJobInput": {
             "type": "object",
             "required": [
@@ -244,9 +350,6 @@
                 },
                 "description": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "image": {
                     "type": "string"
